--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/hierarchy-list.mjs",
   "types": "dist/hierarchy-list.d.ts",
   "files": [
-      "/dist"
+    "/dist"
   ],
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^20.2.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
